--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ sudo: false
 language: python
 python:
   - 3.5
-install: "pip install -r test_requirements.txt"
+install:
+  - "pip install -r test_requirements.txt"
+  - "npm install -g jshint"
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "nvm install stable"
 script: nosetests src/py/tests.py
