--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - "nvm install stable"
-script: nosetests src/py/tests.py
+script: nosetests src/py/tests
 cache: pip
