--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ language: python
 python:
   - 3.5
 install:
-  - "pip install -r test_requirements.txt"
-  - "npm install -g jshint"
+  - "pip install pyflakes"
+  - "npm install"
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
   - "nvm install stable"
-script: nosetests src/py/tests
+script: make
 cache: pip
