--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-    "name": "gettext.js",
-    "private": true,
-    "devDependencies": {
-        "babel-preset-es2015" : "6.1.2",
-        "gulp" : "3.9.0",
-        "gulp-babel" : "6.1.0",
-        "gulp-rename" : "1.2.2",
-        "gulp-uglify" : "1.4.2",
-        "gulp-sourcemaps" : "1.6.0",
-        "gulp-shell": "0.5.1"
-    }
+  "name": "gettextjs",
+  "repository": "https://github.com/ojii/gettext.js",
+  "license": "BSD-3-Clause",
+  "jsnext:main": "src/js/gettext.js",
+  "main": "dist/gettext.js",
+  "version": "1.1.0",
+  "files": [
+    "dist/",
+    "src/js/"
+  ],
+  "description": "gettext in the browser",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-tape": "0.0.9",
+    "rollup": "^0.35.10",
+    "rollup-plugin-babel": "^2.6.1",
+    "tape": "^4.6.0",
+    "tmp": "0.0.28",
+    "uglify-js": "^2.7.3",
+    "which": "^1.2.11"
+  }
 }
