--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "repository": "https://github.com/ojii/gettext.js",
   "license": "BSD-3-Clause",
   "jsnext:main": "src/js/gettext.js",
-  "main": "dist/js/gettext.js",
+  "main": "dist/node/gettext.js",
   "version": "1.1.0",
   "files": [
-    "dist/js/",
+    "dist/node/",
+    "dist/browser/",
     "src/js/"
   ],
   "description": "gettext in the browser",
