--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 sudo: false
 language: python
+cache:
+  - yarn
+  - pip
 python:
   - 3.5
+  - 3.6
 before_install:
   - "nvm install stable"
+  - npm install -g yarn
 install:
   - "pip install -r test_requirements.txt"
-  - "npm install"
+  - "yarn install"
 before_script:
   - "gulp build"
 env:
