--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "src/js/"
   ],
   "description": "gettext in the browser",
+  "author": "Jonas Obrist <ojiidotch@gmail.com>",
   "devDependencies": {
-    "babel-preset-es2015": "https://registry.npmjs.org/babel-preset-es2015/-/babel-preset-es2015-6.14.0.tgz",
-    "babel-preset-es2015-rollup": "https://registry.npmjs.org/babel-preset-es2015-rollup/-/babel-preset-es2015-rollup-1.2.0.tgz",
-    "eslint": "https://registry.npmjs.org/eslint/-/eslint-3.5.0.tgz",
-    "gulp": "https://registry.npmjs.org/gulp/-/gulp-3.9.1.tgz",
-    "gulp-eslint": "https://registry.npmjs.org/gulp-eslint/-/gulp-eslint-3.0.1.tgz",
-    "gulp-tape": "https://registry.npmjs.org/gulp-tape/-/gulp-tape-0.0.9.tgz",
-    "rollup": "https://registry.npmjs.org/rollup/-/rollup-0.35.15.tgz",
-    "rollup-plugin-babel": "https://registry.npmjs.org/rollup-plugin-babel/-/rollup-plugin-babel-2.6.1.tgz",
-    "tape": "https://registry.npmjs.org/tape/-/tape-4.6.0.tgz",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "eslint": "^3.13.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-tape": "^0.0.9",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "tape": "^4.6.3",
     "tape-eslint": "^1.2.1",
-    "tmp": "https://registry.npmjs.org/tmp/-/tmp-0.0.28.tgz",
-    "uglify-js": "https://registry.npmjs.org/uglify-js/-/uglify-js-2.7.3.tgz",
-    "which": "https://registry.npmjs.org/which/-/which-1.2.11.tgz"
+    "tmp": "^0.0.31",
+    "uglify-js": "^2.7.5",
+    "which": "^1.2.12"
   }
 }
