refactored absolutely everything

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-__pycache__
-env
+.envrc
 .idea
-*.egg-info
+yarn-error.log
 docs/_build/
 node_modules/
-*.pyc
-.env
-ghostdriver.log
-.DS_Store
-.*.swap
-._*
-npm-debug.log
-build/
-dist/*.whl
-dist/*.tar.gz
+coverage/
+env/
