--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["es2015"]
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "browsers": ["ie >= 11", "last 2 versions"]
+      }
+    }],
+    "@babel/preset-flow",
+    "@babel/preset-react"
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
