--- a/package.json
+++ b/package.json
@@ -2,29 +2,40 @@
   "name": "gettextjs",
   "repository": "https://github.com/ojii/gettext.js",
   "license": "BSD-3-Clause",
-  "jsnext:main": "src/js/gettext.js",
-  "main": "dist/node/gettext.js",
-  "version": "1.2.0",
+  "main": "src/gettext.js",
+  "version": "2.0.0",
   "files": [
-    "dist/node/",
-    "dist/browser/",
-    "src/js/"
+    "src/"
   ],
   "description": "gettext in the browser",
   "author": "Jonas Obrist <ojiidotch@gmail.com>",
+  "dependencies": {
+    "immutable": "4.0.0-rc.9",
+    "text-encoding": "^0.6.4"
+  },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "eslint": "^3.13.1",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-tape": "^0.0.9",
-    "rollup": "^0.41.4",
-    "rollup-plugin-babel": "^2.7.1",
-    "tape": "^4.6.3",
-    "tape-eslint": "^1.2.1",
-    "tmp": "^0.0.31",
-    "uglify-js": "^2.7.5",
-    "which": "^1.2.12"
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
+    "@babel/polyfill": "^7.0.0-beta.38",
+    "@babel/preset-env": "^7.0.0-beta.38",
+    "@babel/preset-flow": "^7.0.0-beta.38",
+    "@babel/preset-react": "^7.0.0-beta.38",
+    "babel-core": "^7.0.0-beta.38",
+    "babel-jest": "^22.1.0",
+    "babel-loader": "^7.1.2",
+    "bulma": "^0.6.2",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.9",
+    "jest": "^22.1.4",
+    "jest-fetch-mock": "^1.4.1",
+    "raw-loader": "^0.5.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "build-demo": "webpack"
   }
 }
