--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,15 @@
   "presets": [
     ["@babel/preset-env", {
       "targets": {
-        "browsers": ["ie >= 11", "last 2 versions"]
+        "browsers": ["ie >= 11", "last 2 versions"],
+        "node": "current"
       }
     }],
     "@babel/preset-flow",
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
+  ]
 }
