--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
   "description": "gettext in the browser",
   "author": "Jonas Obrist <ojiidotch@gmail.com>",
   "dependencies": {
-    "immutable": "^3.8.2",
-    "text-encoding": "^0.6.4"
+    "@babel/runtime": "^7.8.3",
+    "immutable": ">=3.8.2 || ^4.0.0-rc.12",
+    "text-encoding": ">=0.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
-    "@babel/polyfill": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/preset-flow": "^7.0.0-beta.38",
-    "@babel/preset-react": "^7.0.0-beta.38",
-    "babel-core": "^7.0.0-beta.38",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.2",
-    "bulma": "^0.6.2",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-flow": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.0",
+    "bulma": "^0.8.0",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.9",
-    "jest": "^22.1.4",
-    "raw-loader": "^0.5.1",
+    "css-loader": "^3.4.0",
+    "jest": "^25.1.0",
+    "raw-loader": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "style-loader": "^0.19.1",
-    "tmp": "^0.0.33",
-    "webpack": "^3.10.0"
+    "style-loader": "^1.1.0",
+    "tmp": "^0.1.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "test": "jest",
